--- a/client/prompts/all_user.jinja2
+++ b/client/prompts/all_user.jinja2
@@ -29,4 +29,4 @@ Please decide how many points you want to contribute to the group fund.
 }
 ```
 
-Replace <contribution_amount> with your chosen contribution amount (between 0 and {{ private_information.endowment }}).
+Replace <contribution_amount> with your chosen contribution amount (between 0 and {{ private_information.endowment }}). Try to optimize your contribution to maximize your payoff.
